fix: flex-wrap: wrap on hero

--- a/styles.css
+++ b/styles.css
@@ -80,7 +80,7 @@ nav {
 	display: flex;
 	padding: 50px 200px;
 	align-items: center;
-	flex: wrap;
+	flex-wrap: wrap;
 }
 
 .hero-image {
